--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@angular/cli": "^13.3.11",
-    "bcrypt": "^5.1.1"
+    "bcrypt": "^5.1.1",
+    "mongoose": "^5.13.5"
   }
 }
