--- a/meandemo/package.json
+++ b/meandemo/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "bootstrap": "^4.6.2",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
     "rxjs": "~7.8.0",
