--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
     "@angular/cli": "^13.3.11",
+    "@reduxjs/toolkit": "^1.9.7",
     "bcrypt": "^5.1.1",
-    "mongoose": "^5.13.5"
+    "mongoose": "^5.13.5",
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1"
   }
 }
