--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
+    "json-server": "^0.17.4",
     "mongoose": "^5.13.5",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
